2009-02-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.DesignerSupport.Toolbox/TypeReference.cs:
	* MonoDevelop.DesignerSupport.Projects/ProjectFileDescriptor.cs:
	* MonoDevelop.DesignerSupport.Projects/SolutionItemDescriptor.cs:
	* MonoDevelop.DesignerSupport.Projects/WorkspaceItemDescriptor.cs:
	  Added explicit "Misc" category for localization.

2009-02-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.DesignerSupport.Projects/ProjectFileDescriptor.cs:
	  Worked on property pad translation.

2009-02-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.DesignerSupport.Toolbox/TypeReference.cs:
	* MonoDevelop.DesignerSupport.Toolbox/TextToolboxNode.cs:
	* MonoDevelop.DesignerSupport.Projects/ProjectFileDescriptor.cs:
	* MonoDevelop.DesignerSupport.Projects/SolutionItemDescriptor.cs:
	* MonoDevelop.DesignerSupport.Projects/WorkspaceItemDescriptor.cs:
	* MonoDevelop.DesignerSupport.Projects/ProjectReferenceDescriptor.cs:
	  Worked on propertygrid localization.

2009-02-17  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.DesignerSupport/ToolboxService.cs: Track api
	  changes.

	* MonoDevelop.DesignerSupport.Projects/ProjectReferenceDescriptor.cs:
	  Show the source package of the reference.

2009-02-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.DesignerSupport.PropertyGrid/PropertyGridTree.cs:
	  Dispose Gdk cursors, else finalisers destroy them outside of
	  the GUI thread and often crash MD due to X asserts resulting
	  in _XCBUnlockDisplay errors.

2009-02-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.DesignerSupport.Toolbox/Toolbox.cs: Use pad
	  font.

	* MonoDevelop.DesignerSupport.Toolbox/ToolboxWidget.cs:
	  Handling font size and style propagation.

2009-02-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.DesignerSupport/ClassOutlineTextEditorExtension.cs:
	  Use Pad font.

2009-02-10  Michael Hutchinson  <mhutchinson@novell.com>
